syntax = "proto3";

package queuebridge;

service QueueBridgeBalancer {
  rpc Subscribe(SubscribeRequest) returns (stream QueueMessage);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message SubscribeRequest {
  string queue_id = 1;
}

message QueueMessage {
  string queue_id = 1;
  bytes message = 2;
}

message HeartbeatRequest {
  string queue_id = 1;
  int64 lag = 2;
}

message HeartbeatResponse {
  string status = 1;
}
